<?xml version="1.0"?>
<package>
  <name>andrzej_description</name>
  <version>0.0.0</version>
  <description>The andrzej_description package</description>
  
  <maintainer email="olesinski.jakub@gmail.com">Jakub Olesinski</maintainer>

  <license>BSD</license>

  <url type="website">https://andrzejrobot.wordpress.com/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
