<?xml version="1.0"?>
<package>
  <name>andrzej_control</name>
  <version>0.0.0</version>
  <description>The andrzej_control package</description>

  <maintainer email="olesinski.jakub@gmail.com">Jakub Olesinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>ros_controllers</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ros_controllers</run_depend>

  <export>
  </export>
</package>
