<?xml version="1.0"?>
<package>
  <name>andrzej_teleop</name>
  <version>0.0.0</version>
  <description>The andrzej_teleop package</description>

  <maintainer email="olesinski.jakub@gmail.com">Jakub Olesinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>joy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
